Fix About section spacing

--- a/allison-winters-brainflix/src/components/About/About.scss
+++ b/allison-winters-brainflix/src/components/About/About.scss
@@ -11,6 +11,7 @@
             @include small-font-header;
             @include tablet-bp {
                 @include large-font-header;
+                margin-top: $px24;
                 margin-bottom: 0;
             }
             @include desktop-bp {
